--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
     <div x-data="app()" class="bg-white rounded-2xl shadow-xl p-8">
 
       <h1 class="text-4xl font-bold text-center text-gray-800 mb-3">
-        Căutare Prețuri Piese China & Agro
+        Pricelist VDM
       </h1>
       <p class="text-center text-gray-600 mb-8">Alege brandul și introdu codul</p>
 
